@@ -632,6 +632,11 @@ org.openjump.core.ui.plugin.queries.SimpleQuery.stop = Stop
 org.openjump.core.ui.plugin.queries.SimpleQuery.string = Text
 org.openjump.core.ui.plugin.queries.SimpleQuery.true = richtig
 org.openjump.core.ui.plugin.queries.SimpleQuery.value = Wert
+org.openjump.core.ui.plugin.style.ImportArcMapStylePlugIn.name = ArcMap-Style importieren
+org.openjump.core.ui.plugin.style.ImportArcMapStylePlugIn.Must-Select-Location-Of-Tool = Um das externe Programm ArcMap2SLD benutzen zu k\u00F6nnen,\n\
+	geben Sie im folgenden Dialog bitte dessen Ort an.
+org.openjump.core.ui.plugin.style.ImportArcMapStylePlugIn.Must-Select-Location-Of-SLD = Der n\u00E4chste Schritt ist, das von ArcMap2SLD\n\
+	generierte SLD auszuw\u00E4hlen.
 org.openjump.core.ui.plugin.style.ImportSLDPlugIn.name = SLD importieren
 org.openjump.core.ui.plugin.style.ImportSLDPlugIn.Color-Theming-Styles = Thematische Farbgebung-Zeichenv.
 org.openjump.core.ui.plugin.style.ImportSLDPlugIn.Choose-Style = Bitte w\u00E4hlen Sie eine Zeichenvorschrift aus\:
