@@ -632,6 +632,11 @@ org.openjump.core.ui.plugin.queries.SimpleQuery.stop = Stopper
 org.openjump.core.ui.plugin.queries.SimpleQuery.string = Texte
 org.openjump.core.ui.plugin.queries.SimpleQuery.true = vrai
 org.openjump.core.ui.plugin.queries.SimpleQuery.value = Valeur
+org.openjump.core.ui.plugin.style.ImportArcMapStylePlugIn.name = Import ArcMap Style
+org.openjump.core.ui.plugin.style.ImportArcMapStylePlugIn.Must-Select-Location-Of-Tool = To be able to use the external program ArcMap2SLD,\n\
+	please specify its location in the following dialog.
+org.openjump.core.ui.plugin.style.ImportArcMapStylePlugIn.Must-Select-Location-Of-SLD = The next step is to select the SLD that was\n\
+	generated by ArcMap2SLD.
 org.openjump.core.ui.plugin.style.ImportSLDPlugIn.name = Importer un fichier de style SLD
 org.openjump.core.ui.plugin.style.ImportSLDPlugIn.Color-Theming-Styles = Color Theming Styles
 org.openjump.core.ui.plugin.style.ImportSLDPlugIn.Choose-Style = Please choose a style\:
