@@ -618,6 +618,11 @@ org.openjump.core.ui.plugin.queries.SimpleQuery.stop = Stop
 org.openjump.core.ui.plugin.queries.SimpleQuery.string = String
 org.openjump.core.ui.plugin.queries.SimpleQuery.true = true
 org.openjump.core.ui.plugin.queries.SimpleQuery.value = Value
+org.openjump.core.ui.plugin.style.ImportArcMapStylePlugIn.name = Import ArcMap Style
+org.openjump.core.ui.plugin.style.ImportArcMapStylePlugIn.Must-Select-Location-Of-Tool = To be able to use the external program ArcMap2SLD,\n\
+	please specify its location in the following dialog.
+org.openjump.core.ui.plugin.style.ImportArcMapStylePlugIn.Must-Select-Location-Of-SLD = The next step is to select the SLD that was\n\
+	generated by ArcMap2SLD.
 org.openjump.core.ui.plugin.style.ImportSLDPlugIn.name = Import SLD
 org.openjump.core.ui.plugin.style.ImportSLDPlugIn.Color-Theming-Styles = Color Theming Styles
 org.openjump.core.ui.plugin.style.ImportSLDPlugIn.Choose-Style = Please choose a style\:
